tests/e2e/lfx-test/00-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
  - policy.yaml
assert:
  - policy-ready.yaml
