tests/e2e/lfx-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: lfx-add-labels
status:
  conditions:
    - reason: Succeeded
      status: "True"
      type: Ready
